--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
   <meta name="CocoaVersion" content="1265.21">
   <style type="text/css">
     p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica}
+    p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica; min-height: 14.0px}
   </style>
 </head>
 <body>
 <p class="p1">Välkommen till Hemsidan</p>
+<p class="p2"><br></p>
+<p class="p1">Jag hoppas att du får en fin dag :))))</p>
 </body>
 </html>
