--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
 <body>
 <p class="p1"><br></p>
 <p class="p2"><br></p>
-<p class="p3">&lt;body bgcolor = ”#DDDDFF”&gt;</p>
+<p class="p3">&lt;body bgcolor =”#DDDDFF”&gt;</p>
 <p class="p2"><br></p>
 <p class="p3">Välkommen till Hemsidan</p>
 <p class="p2"><br></p>
 <p class="p3">Jag hoppas att du får en fin dag :))))</p>
+<p class="p2"><br></p>
+<p class="p3">&lt;/body&gt;</p>
 <p class="p2"><br></p>
 </body>
 </html>
