--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
     p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 24.0px; font: 12.0px Helvetica; min-height: 14.0px}
     p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica; min-height: 14.0px}
     p.p3 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica}
+    p.p4 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 24.0px; font: 12.0px 'Courier New'; color: #333333}
   </style>
 </head>
 <body>
 <p class="p1"><br></p>
 <p class="p2"><br></p>
 <p class="p3">&lt;body bgcolor =”#DDDDFF”&gt;</p>
-<p class="p2"><br></p>
+<p class="p4"><b>&lt;body text="#004400"&gt;</b></p>
 <p class="p3">Välkommen till Hemsidan</p>
 <p class="p2"><br></p>
 <p class="p3">Jag hoppas att du får en fin dag :))))</p>
 <p class="p2"><br></p>
-<p class="p3">&lt;/body&gt;</p>
+<p class="p2"><br></p>
 <p class="p2"><br></p>
 </body>
 </html>
