--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <p class="p2"><br></p>
 <p class="p3">Jag hoppas att du får en fin dag :))))</p>
 <p class="p2"><br></p>
-<p class="p2"><br></p>
+<p class="p3">&lt;hr&gt;</p>
 <p class="p2"><br></p>
 </body>
 </html>
