--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica; min-height: 14.0px}
     p.p3 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px Helvetica}
     p.p4 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 24.0px; font: 12.0px 'Courier New'; color: #333333}
+    p.p5 {margin: 0.0px 0.0px 0.0px 0.0px; line-height: 22.0px; font: 16.0px Consolas}
+    span.s1 {color: #0000ff}
+    span.s2 {color: #a52a2a}
+    span.s3 {background-color: #ffffff}
+    span.s4 {color: #ff0000}
+    span.s5 {color: #0000cd}
   </style>
 </head>
 <body>
@@ -22,7 +28,7 @@
 <p class="p2"><br></p>
 <p class="p3">Jag hoppas att du får en fin dag :))))</p>
 <p class="p2"><br></p>
-<p class="p3">&lt;hr&gt;</p>
+<p class="p5"><span class="s1">&lt;</span><span class="s2">font</span><span class="s3"> </span><span class="s4">color=</span><span class="s5">"red"</span><span class="s1">&gt;</span><span class="s3">This is some text!</span><span class="s1">&lt;</span><span class="s2">/font</span><span class="s1">&gt;</span></p>
 <p class="p2"><br></p>
 </body>
 </html>
