html björnis, spel

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   </style>
 </head>
 <body>
-<p class="p1">Hej Björnis</p>
+<p class="p1">Hej Björnis, jag hoppas att det går bra i ditt spel :-)</p>
 </body>
 </html>
